--- a/index.html
+++ b/index.html
@@ -12,30 +12,32 @@
 
 <main>
     
-<section class="player">
-<h2 class="name" id="name1">Player 1</h2>
-<p class="score" id="score1">43</p>
-<section class="current">
-<p class="current-label">Current</p>
-<p class="current-score" id="current1">0</p>
-</section>
-<section class="player">
-<h2 class="name" id="name2">Player 2</h2>
-<p class="score" id="score2">24</p>
-<section class="current">
-<p class="current-label">Current</p>
-<p class="current-score" id="current2">0</p>
-</section>
+    <section class="player player-active" id="player1">
+        <h2 class="name" id="name1">Player 1</h2>
+        <p class="score" id="score1">43</p>
+        <section class="current">
+        <p class="current-label">Current</p>
+        <p class="current-score" id="current1">0</p>
+        </section>
+        </section>
 
-<img src="sources/dice-1.png" alt="Playing dice" class="dice" />
+        <section class="player"id="player2">
+        <h2 class="name" id="name2">Player 2</h2>
+        <p class="score" id="score2">24</p>
+        <section class="current">
+        <p class="current-label">Current</p>
+        <p class="current-score" id="current2">0</p>
+        </section>
+        </section>
+        
+        <img />
+        <img />
 
-<section>
-<button class="newButton"> New game</button>
-<button class="rollButton"> Roll dice</button>
-<button class="holdButton"> Hold</button>
-</section>
+        <button class="btn btn-new"> New game</button>
+        <button class="btn btn-roll"> Roll dice</button>
+        <button class="btn btn-hold"> Hold</button>
 
-</main>
+    </main>
 
 </body>
 </html>
