--- a/firstpage.html
+++ b/firstpage.html
@@ -22,7 +22,7 @@
     </section>
     <section class="select-score">
 <h2>Please select a target score</h2>
-<input class="score-input" type="number">
+<input class="winning-score" type="number">
 <button class="start-game"><a href="index.html" >START GAME</a></button>
     </section>
 </section>
