--- a/index.html
+++ b/index.html
@@ -29,13 +29,26 @@
         <p class="current-score" id="current2">0</p>
         </section>
         </section>
-        
-        <img />
-        <img />
 
-        <button class="btn btn-new"> New game</button>
-        <button class="btn btn-roll"> Roll dice</button>
-        <button class="btn btn-hold"> Hold</button>
+        <section class="dice">
+        <img src="sources/dice1.png" alt="Dice 1" id="dice1"/>
+        <img src="sources/dice2.png" alt="Dice 2" id="dice2"/>
+    </section>
+
+
+        <button id="btn-new"> New game</button>
+        <button id="btn-roll"> Roll dice</button>
+        <button id="btn-hold"> Hold</button>
+
+        <section class="special-event" id="special-event">
+            <!-- Insert a funny GIF or any special message here -->
+            <img src="funny-gif.gif" alt="Funny GIF">
+        </section>
+
+        <audio id="background-music" src="background-music.mp3" loop></audio>
+        <audio id="dice-roll-sound" src="dice-roll-sound.mp3"></audio>
+        <audio id="win-sound" src="win-sound.mp3"></audio>
+        <audio id="lose-sound" src="lose-sound.mp3"></audio>
 
     </main>
 
