--- a/index.html
+++ b/index.html
@@ -1,56 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" href="style.css" />
-        <script src="script.js" defer></script>
-<title>Dice Game</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Dice Game</title>
 </head>
 <body>
-
-<main>
+    <main>
+        <section class="players">
+            <section class="player player-active" id="player1">
+                <h2 class="name" id="name1">Player 1</h2>
+                <p class="score" id="score1">0</p>
+                <section class="current">
+                    <p class="current-label">Current</p>
+                    <p class="current-score" id="current1">0</p>
+                </section>
+            </section>
     
-    <section class="player player-active" id="player1">
-        <h2 class="name" id="name1">Player 1</h2>
-        <p class="score" id="score1">43</p>
-        <section class="current">
-        <p class="current-label">Current</p>
-        <p class="current-score" id="current1">0</p>
-        </section>
-        </section>
-
-        <section class="player"id="player2">
-        <h2 class="name" id="name2">Player 2</h2>
-        <p class="score" id="score2">24</p>
-        <section class="current">
-        <p class="current-label">Current</p>
-        <p class="current-score" id="current2">0</p>
-        </section>
+            <section class="player" id="player2">
+                <h2 class="name" id="name2">Player 2</h2>
+                <p class="score" id="score2">0</p>
+                <section class="current">
+                    <p class="current-label">Current</p>
+                    <p class="current-score" id="current2">0</p>
+                </section>
+            </section>
         </section>
 
         <section class="dice">
-        <img src="sources/dice1.png" alt="Dice 1" id="dice1"/>
-        <img src="sources/dice2.png" alt="Dice 2" id="dice2"/>
-    </section>
-
-
-        <button id="btn-new"> New game</button>
-        <button id="btn-roll"> Roll dice</button>
-        <button id="btn-hold"> Hold</button>
-
-        <section class="special-event" id="special-event">
-            <!-- Insert a funny GIF or any special message here -->
-            <img src="funny-gif.gif" alt="Funny GIF">
+            <img src="sources/dice1.png" alt="Dice 1" id="dice1" class="dice-img">
+            <img src="sources/dice2.png" alt="Dice 2" id="dice2" class="dice-img">
         </section>
 
-        <audio id="background-music" src="background-music.mp3" loop></audio>
-        <audio id="dice-roll-sound" src="dice-roll-sound.mp3"></audio>
-        <audio id="win-sound" src="win-sound.mp3"></audio>
-        <audio id="lose-sound" src="lose-sound.mp3"></audio>
+        <section class="winning-score">
+            <label for="winning-score">Winning Score:</label>
+            <input type="number" id="winning-score" value="100">
+        </section>
 
+        <button class="rollBtn" id="btn-roll">Roll dice</button>
+        <button class="holdBtn" id="btn-hold">Hold</button>
+        <button class="newGame" id="btn-new">New game</button>
     </main>
-
+    <script src="script.js"></script>
 </body>
 </html>
